# rust-spice

./: .gitignore  .gitmodules  .mdl.rb  .mdlrc  .mdlrules.rb  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  compile.py  wrapper.h
cspice-sys/: Cargo.toml  DISCLAIMER.txt  build.rs  kernels
cspice-sys/examples/: linked.rs
cspice-sys/src/: cspice.rs  lib.rs
examples/: asteroid.rs  binary.rs  binary_inertial.rs  ecliptic.rs  export_position.rs  export_position_binary.rs  frames.rs  positions.rs  quick_load.rs  system_frames.rs  test.rs
rsc/data/: hera_PO_EMA_2024.tm
rsc/krn/: hera_study_PO_EMA_2024.tm
rust-spice/: Cargo.toml  README.md
rust-spice-derive/: Cargo.toml  LICENSE  README.md
rust-spice-derive/src/: lib.rs
rust-spice-results/: Cargo.toml
rust-spice-results/src/: error.rs  lib.rs
rust-spice/examples/: asteroid.rs  binary.rs  ecliptic.rs  ffi.rs  occultation.rs  quick_load.rs
rust-spice/rsc/krn/: hera_study_PO_EA_2026.tm  hera_study_PO_EMA_2024.tm  kernels.tm
rust-spice/src/: lib.rs
rust-spice/src/core/: c_raw.rs  check_geometric_conditions.rs  das.rs  kernel.rs  lock.rs  mod.rs  neat.rs  raw.rs  result.rs
rust-spice/src/spicetools/: mod.rs  system.rs
rust-spice/tests/: lib.rs
rust-spice/tests/core/: kernel.rs  mod.rs  raw.rs  results.rs
rust-spice/tests/spicetools/: system.rs
scripts/: getspice.sh
src/: lib.rs
src/core/: check_geometric_conditions.rs  kernel.rs  mod.rs
src/spicetools/: constants.rs  mod.rs  physics.rs  system.rs
src/toolbox/: geometry.rs  log.rs  matrix.rs  mod.rs
tests/: lib.rs
tests/core/: kernel.rs
tests/spicetools/: mod.rs  physics.rs  system.rs
tests/toolbox/: geometry.rs  matrix.rs  mod.rs
