[package]
name = "rust-spice"
version = "0.4.0"
authors = ["Greg Henry <contact@greghenry.xyz>"]
edition = "2018"
description = "WOW! The complete NASA/NAIF Spice toolkit is actually usable on Rust."
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rust-spice"
keywords = ["space", "spice", "nasa", "trajectories", "kernels"]
categories = ["algorithms", "api-bindings", "science"]

[lib]
name = "spice"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
itertools = "0.10.0"
nalgebra = {version = "0.24.0", features = ["serde-serialize"]}
approx = "0.4.0"
log = "0.4"
simplelog = "0.9"
serde_json = "1.0"
serde = "1.0.124"
serial_test = "0.5.1"
cspice-sys = "0.0.1"
