[package]
name = "rust-spice"
version = "0.5.3"
authors = ["Greg Henry <contact@greghenry.xyz>"]
edition = "2018"
description = "WOW! The complete NASA/NAIF Spice toolkit is actually usable on Rust."
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rust-spice"
keywords = ["space", "spice", "nasa", "naif", "kernels"]
categories = ["algorithms", "api-bindings", "science"]
links = "cspice"

[lib]
name = "spice"
path = "src/lib.rs"

[profile.release]
lto = true

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
itertools = "0.10.0"
nalgebra = {version = "0.26.1", features = ["serde-serialize"]}
approx = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
serial_test = "0.5.1"
log = "0.4"
thiserror = "1.0"
rustool = "0.3.20"
# rustool = {git = "https://github.com/GregoireHENRY/rustool", branch = "dev"}
