[package]
name = "rust-spice-derive"
version = "0.6.0"
authors = ["Greg Henry <contact@greghenry.xyz>"]
edition = "2018"
description = "WOW! The complete NASA/NAIF Spice toolkit is actually usable on Rust."
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rust-spice"
keywords = ["space", "spice", "nasa", "naif", "kernels"]
categories = ["algorithms", "api-bindings", "science"]

[lib]
name = "spice_derive"
proc-macro = true

[profile.release]
lto = true

[dependencies]
itertools = "0.10.0"
# rustool = {git = "https://github.com/GregoireHENRY/rustool", branch = "dev"}
