[package]
name = "rust-spice-derive"
version = "0.6.4"
authors = ["Greg Henry <contact@greghenry.xyz>"]
edition = "2018"
description = "WOW! The complete NASA/NAIF Spice toolkit is actually usable on Rust."
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rust-spice"
keywords = ["space", "spice", "nasa", "naif", "kernels"]
categories = ["algorithms", "api-bindings", "science"]

[lib]
name = "spice_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
syn = {version = "1.0.72", features = ["full"]}
quote = "1.0.9"
# rustool = {git = "https://github.com/GregoireHENRY/rustool", branch = "dev"}
