[package]
name = "rust-spice"
version = "0.7.1"
authors = ["Greg Henry <greg.henry@mail.com>"]
edition = "2018"
description = "WOW! The complete NASA/NAIF Spice toolkit is actually usable on Rust."
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rust-spice"
keywords = ["space", "spice", "nasa", "naif", "kernels"]
categories = ["algorithms", "api-bindings", "science"]

[lib]
name = "spice"

[dependencies]
itertools = "0.10.0"
nalgebra = {version = "0.29", features = ["serde-serialize"]}
approx = "0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
serial_test = "0.5.1"
log = "0.4"
thiserror = "1.0"
libc = "0.2"
cspice-sys = { git = "https://github.com/bermejus/rspice.git" }
rust-spice-derive = { version = "0.7", path = "../rust-spice-derive" }
rustool = "0.3"
