[package]
name = "rust-spice"
version = "0.7.5"
authors = ["Grégoire Henry <greg.henry@mail.com>"]
edition = "2018"
description = "WOW! The complete NASA/NAIF Spice toolkit is actually usable on Rust."
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rust-spice"
keywords = ["space", "spice", "nasa", "naif", "kernels"]
categories = ["algorithms", "api-bindings", "science"]

[lib]
name = "spice"

[features]
default = ["dep:cspice-sys"]
noclang = ["dep:cspice-sys-no-clang"]
lock = []

[dependencies]
itertools = "0.11"
nalgebra = {version = "0.32", features = ["serde-serialize"]}
approx = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
serial_test = "2.0"
log = "0.4"
thiserror = "1.0"
libc = "0.2"
cspice-sys = { package="cspice-sys", version = "1", optional = true }
cspice-sys-no-clang = { package="cspice-sys", version = "<=0.0.1", optional = true }
rust-spice-derive = { version = "0.7", path = "../rust-spice-derive" }
